--- a/api/.env.example
+++ b/api/.env.example
@@ -16,8 +16,8 @@ SECRET_SALT=your-secret-salt-for-passwords
 ADMIN_KEY=your-admin-api-key
 
 # App Configuration
-TEMP_DOMAIN=your-temp-email.netlify.app
-SITE_URL=https://your-site.netlify.app
+TEMP_DOMAIN=mxtemp.netlify.app
+SITE_URL=https://mxtemp.netlify.app
 
 # Rate Limiting
 RATE_LIMIT_PER_HOUR=100
