--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 # Supabase Database
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_KEY=your-service-role-key
+SUPABASE_URL=https://neccyjlmrahvcllmchcu.supabase.co
+SUPABASE_SERVICE_KEY=sb_publishable_P4SzPDctE8D5yA4jRZKQXg_CqoPtu7E
 
 # Email Configuration
 SMTP_HOST=smtp.sendgrid.net
